gateway/jwt.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: jwt-gateway
  namespace: default
  labels:
    app: gateway
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 97
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
#apiVersion: security.istio.io/v1
#kind: RequestAuthentication
#metadata:
#  name: req-authn-for-all
#  namespace: istio-system
#spec:
#  selector:
#    matchLabels:
#      app: gateway
#  jwtRules:
#    - issuer: "https://fungover.org/auth"
#      jwksUri: https://fungover.org/auth/.well-known/jwks.json
#      outputClaimToHeaders:
#        - header: "x-jwt-claim-sub"
#          claim: "sub"
#        - header: "x-jwt-scope"
#          claim: "scope"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: test1
  namespace: default
spec:
  parentRefs:
    - name: jwt-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /posts
        - path:
            type: Exact
            value: /newpost
      backendRefs:
        - name: posts-service
          port: 8000
