gateway/policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt-for-all
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: gateway
  action: ALLOW
  rules:
    - from:
      - source:
          requestPrincipals: ["*"]
#      to:
#        - operation:
#            methods: ["GET"]
#            paths: ["/showheaders"]
      when:
        - key: request.auth.claims[scope]
          values: [ "read" ]
